--- a/css/style.css
+++ b/css/style.css
@@ -335,3 +335,68 @@ html, body {
 }
 
 /* FOOTER */
+.footer {
+    background-color: #002146;
+    color: white;
+    padding: 50px;
+    font-size: 20px;
+}
+
+.footer__content {
+    width: 80%;
+    margin: auto;
+}
+
+.footer__content hr {
+    border: 1px solid #f6c303;
+    border-style: groove;
+}
+
+.footer__contact,
+.footer__featured,
+.footer__quick {
+    float: left;
+    width: calc(100% / 3);
+    padding-right: 40px;
+}
+
+.footer__contact h3,
+.footer__featured h3,
+.footer__quick h3 {
+    margin-bottom: 30px;
+}
+
+.footer__contact i {
+    color: #f6c303;
+    padding-right: 10px;
+}
+
+.footer__contact span {
+    line-height: 28px;
+}
+
+.footer__address,
+.footer__tel,
+.footer__mail {
+    margin-bottom: 20px;
+}
+
+.footer__featured ul,
+.footer__quick ul {
+    list-style: none;
+}
+
+.footer__featured li,
+.footer__quick li {
+    margin-bottom: 25px;
+}
+
+.footer__featured a,
+.footer__quick a {
+    text-decoration: none;
+    color: white;
+}
+
+.footer__copyrights {
+    margin-top: 40px;
+}
